# vercel-fastapi

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
